Wired in the bottom end of the barely-secret connection between the swamps and the alteborea so it's actually accessible.  Turned the one hyper-difficult leg of it into a mega coin drop.

--- a/data/level/Forest/murky-mire.cfg
+++ b/data/level/Forest/murky-mire.cfg
@@ -1481,6 +1481,7 @@
 	"next_level": "putrid-pools.cfg",
 	"palettes": ["forest_decay"],
 	"preloads": "",
+	"previous_level": "moribund-muck.cfg",
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
@@ -1543,23 +1544,6 @@
 				"y": 1088
 			},
 			{
-				"_uuid": "7fc23d2449c24180a4ec721e90d1c6f8",
-				"activation_area": [2990,1404,4189,2227],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_1229e144",
-				"property_data": {
-					"_x2_bound": 4140,
-					"_x_bound": 3040,
-					"_y2_bound": 2228,
-					"_y_bound": 1504
-				},
-				"type": "acid_controller",
-				"x": 3040,
-				"y": 1504
-			},
-			{
 				"_uuid": "b8f93cbd25bc419890734e1873ea1bbd",
 				"activation_area": [950,1596,2913,2545],
 				"created": true,
@@ -1575,6 +1559,23 @@
 				"type": "acid_controller",
 				"x": 2464,
 				"y": 1696
+			},
+			{
+				"_uuid": "7fc23d2449c24180a4ec721e90d1c6f8",
+				"activation_area": [2990,1404,4189,2227],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_1229e144",
+				"property_data": {
+					"_x2_bound": 4140,
+					"_x_bound": 3040,
+					"_y2_bound": 2228,
+					"_y_bound": 1504
+				},
+				"type": "acid_controller",
+				"x": 3040,
+				"y": 1504
 			},
 			{
 				"_uuid": "40362e571a014d5a87c0a77126425b14",
@@ -1686,6 +1687,16 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,lfs,lfs,lfs,,lfs,lfs,lfs,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs,lfs,lfs,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,lfs,lfs,lfs,lfs,lfs,lfs
@@ -1860,7 +1871,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,nbr,nbr,nbr,nbr
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "player"
+			"zorder": "wooden_bridge_tile_rear_parts"
 		},
 		{
 			"tiles": ",
@@ -1939,25 +1950,47 @@ wsf,wsf,,wsf,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf
 			"zorder": "wooden_scaffolding_background_behind_trees"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg
-,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_near_background"
+		},
+		{
+			"tiles": ",
+,
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg
+,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
@@ -2048,7 +2081,7 @@ wsf,wsf,,wsf,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf
 			"variations": "",
 			"x": -4800,
 			"x_speed": 100,
-			"y": -480,
+			"y": -544,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
 		},
@@ -2311,7 +2344,37 @@ lfm,lfm,lfm,,,,,lfm,lfm,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "player"
+			"zorder": "mushrooms_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foliage_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
 		},
 		{
 			"tiles": "",
@@ -2322,6 +2385,16 @@ lfm,lfm,lfm,,,,,lfm,lfm,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lef
@@ -2525,6 +2598,36 @@ msh,msh
 			"y": -32,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foreground_parallax_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_parallax_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Murky Mire",
