--- a/data/level/Forest/consternatious-conundrum.cfg
+++ b/data/level/Forest/consternatious-conundrum.cfg
@@ -335,16 +335,6 @@
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr
@@ -441,28 +431,28 @@
 			"zorder": "player"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,frg,frg,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -483,7 +473,7 @@
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,frg,frg,,,,,,,,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -607,36 +597,6 @@
 			"zorder": "player"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": -1
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,msh
 ,
 ,
@@ -694,26 +654,6 @@ msh,msh
 			"y": -1600,
 			"y_speed": 100,
 			"zorder": "mushrooms_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Consternatious Conundrum",
