Wired in the hooks to set up a conversation that happens right after frogatto beats the mushroom boss, but finds himself conspicuously alone.

--- a/data/level/Forest/ignominous-interlude.cfg
+++ b/data/level/Forest/ignominous-interlude.cfg
@@ -834,18 +834,109 @@
 			"y": 385
 		},
 		{
-			"_uuid": "e8a063441e7b4dbe93228859952b11b9",
-			"current_frame": "normal",
+			"_uuid": "2ffaeac60f50467c8667adf4e4bf8d85",
+			"current_frame": "stand",
 			"custom": true,
 			"is_human": true,
-			"label": "_35cda010",
+			"label": "_11b2cf72",
 			"objects_destroyed": {
 				"level": "ignominous-interlude.cfg",
 				"objects": []
 			},
+			"property_data": {
+				"last_unique_checkpoint_label": "_4c6f6ee4",
+				"last_unique_checkpoint_level_name": "ignominous-interlude.cfg",
+				"original_level_we_spawned_on": "ignominous-interlude.cfg",
+				"player_has_died_since_last_unique_checkpoint": false,
+				"stored_events": {
+					"ignominous_interlude_gate_opened": 0,
+					"ignominous_interlude_platform_active": 0,
+					"started_game": 1
+				}
+			},
 			"type": "frogatto_playable",
-			"x": -64,
-			"y": 224
+			"x": 192,
+			"y": 414
+		},
+		{
+			"_uuid": "91c41cc7be94478cb9f367853fbc5271",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "camera1",
+			"on_cut": "[
+				set(level.player.control_lock, null),
+				set(level.zoom, 1.0),
+				set(level.lock_screen, null),
+			]",
+			"on_roll": "[
+				screen_flash([0,0,0,255], [0,0,0,-1], 255),
+				set(starting_camera_position, lib.standardize.camera(level)),
+				set(level.player.control_lock, []),
+				set_path(([
+					[-416,416],
+					[frogatto.mid_x, frogatto.mid_y]
+				] where frogatto = level.player )),
+			]",
+			"property_data": {
+				"average_path": true,
+				"linked_object": "target2",
+				"path": [],
+				"release_control": false,
+				"speed": 5,
+				"start_with_player_as_first_node": false,
+				"target_zoom": 2,
+				"tween_type": "ease_out_sine"
+			},
+			"type": "camera_controller",
+			"x": -236,
+			"y": 372
+		},
+		{
+			"_uuid": "47fb32fafeb54b9180de23226505c0f7",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "target",
+			"on_start_level": "if(level.player.get_stored_event('missing_berd_post_mushroom_boss_speech') or (level.player.get_stored_event('mushroom_boss_fight_won') = null), [remove_object(me)],
+								[set(level.zoom, 1.5),fire_event(get_object_or_die(level, 'camera1'),'triggered')]
+								)",
+			"property_data": {
+				"_x2_bound": 214,
+				"_x_bound": -36,
+				"_y2_bound": 470,
+				"_y_bound": 220
+			},
+			"type": "level_controller",
+			"x": 64,
+			"y": 320
+		},
+		{
+			"_uuid": "eb7c731d03a8403bae861c48bfce1659",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "target2",
+			"on_triggered": "[
+				speech_dialog(
+                                    set(level.zoom, 2),
+                                    set(frogatto.facing, 1),
+                                    set(level.focus, [frogatto]),
+                         			set(frogatto.animation,'emote_confused'),
+
+									set(frogatto.animation,'emote_talk'),  
+                         			frogatto, [~So... ~],
+									set(frogatto.animation,'emote_gesticulate'),  
+                         			frogatto, [~Now what?~],
+                ),
+			
+			] where frogatto = level.player",
+			"property_data": {
+				"_x2_bound": 426,
+				"_x_bound": 176,
+				"_y2_bound": 330,
+				"_y_bound": 80
+			},
+			"type": "level_controller",
+			"x": 276,
+			"y": 180
 		}
 	],
 	"dimensions": [-480,-2144,8959,1439],
