Fleshed out the post-fight cutscene conversation with the intended dialogue.

--- a/data/level/Forest/ignominous-interlude.cfg
+++ b/data/level/Forest/ignominous-interlude.cfg
@@ -916,16 +916,25 @@
 			"label": "target2",
 			"on_triggered": "[
 				speech_dialog(
-                                    set(level.zoom, 2),
-                                    set(frogatto.facing, 1),
-                                    set(level.focus, [frogatto]),
-                         			set(frogatto.animation,'emote_confused'),
-
-									set(frogatto.animation,'emote_talk'),  
-                         			frogatto, [~So... ~],
-									set(frogatto.animation,'emote_gesticulate'),  
-                         			frogatto, [~Now what?~],
-                ),
+								set(level.zoom, 2),
+								set(frogatto.facing, 1),
+								set(level.focus, [frogatto]),
+								set(frogatto.animation,'emote_talk'),  
+					frogatto,	[~So…~],
+								set(frogatto.animation,'emote_confused'),  
+					frogatto,	[~Uh…~],
+					frogatto,	[~…~],
+					frogatto,	[~Round about, right now, this would be\\nthe perfect time for that feathered friend of ours.~],
+								set(frogatto.animation,'emote_confused'),  
+					frogatto,	[~Right, Berd 'ol buddy?\\nPlease?~],
+					frogatto,	[~…~],
+								set(frogatto.animation,'emote_oh'),  
+					frogatto,	[~I am really, <em>really</em> scared I'm just going deeper\\ninto the swamp instead of heading out of it.~],
+								set(frogatto.animation,'emote_geez'),  
+								[~\"Showing up\" is the least you could do.~],
+								set(level.focus,[]),
+								set(level.zoom, 1),
+				),
 			
 			] where frogatto = level.player",
 			"property_data": {
