--- a/data/level/Forest/ignominous-interlude.cfg
+++ b/data/level/Forest/ignominous-interlude.cfg
@@ -925,9 +925,27 @@
 					frogatto,	[~Uh…~],
 					frogatto,	[~…~],
 					frogatto,	[~Round about, right now, this would be\\nthe perfect time for that feathered friend of ours.~],
+								frogatto.scripted_move_to_x(70,-1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_2'))])
+				),
+			
+			] where frogatto = level.player",
+
+			"on_conversation_part_2": "[
+				speech_dialog(
 								set(frogatto.animation,'emote_confused'),  
 					frogatto,	[~Right, Berd 'ol buddy?\\nPlease?~],
 					frogatto,	[~…~],
+								set(frogatto.animation,'emote_oh'),  
+					frogatto,	[~I am really, <em>really</em> scared I'm just going deeper\\ninto the swamp instead of heading out of it.~],
+								set(frogatto.animation,'emote_geez'),  
+								[~\"Showing up\" is the least you could do.~],
+								frogatto.scripted_move_to_x(270,1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_3'))])
+				),
+			
+			] where frogatto = level.player",
+
+			"on_conversation_part_3": "[
+				speech_dialog(
 								set(frogatto.animation,'emote_oh'),  
 					frogatto,	[~I am really, <em>really</em> scared I'm just going deeper\\ninto the swamp instead of heading out of it.~],
 								set(frogatto.animation,'emote_geez'),  
