--- a/data/level/Forest/ignominious-interlude.cfg
+++ b/data/level/Forest/ignominious-interlude.cfg
@@ -82,14 +82,14 @@
 			"face_right": false,
 			"label": "_4c6f6ee4",
 			"property_data": {
-				"_x2_bound": 407,
-				"_x_bound": 307,
-				"_y2_bound": 471,
-				"_y_bound": 171
+				"_x2_bound": 610,
+				"_x_bound": 510,
+				"_y2_bound": 474,
+				"_y_bound": 174
 			},
 			"type": "save_statue",
-			"x": 327,
-			"y": 341
+			"x": 530,
+			"y": 344
 		},
 		{
 			"_uuid": "9c5531b77f3243a9b59c81c7d7aa4846",
@@ -367,7 +367,7 @@
 			"custom": true,
 			"label": "_2f499277",
 			"property_data": {
-				"event": "ignominous_interlude_gate_opened"
+				"event": "ignominious_interlude_gate_opened"
 			},
 			"type": "gate",
 			"x": 5472,
@@ -495,7 +495,7 @@
 			"custom": true,
 			"label": "_660f31ce",
 			"property_data": {
-				"event": "ignominous_interlude_gate_opened"
+				"event": "ignominious_interlude_gate_opened"
 			},
 			"type": "pressure_plate_wooden",
 			"x": 7136,
@@ -661,7 +661,7 @@
 			"custom": true,
 			"label": "_2d85e1b1",
 			"property_data": {
-				"event": "ignominous_interlude_platform_active"
+				"event": "ignominious_interlude_platform_active"
 			},
 			"type": "pressure_plate_wooden",
 			"x": 5792,
@@ -678,7 +678,7 @@
 				"_move_y1": 480,
 				"_move_y2": 280,
 				"actual_speed": 0.49456,
-				"event": "ignominous_interlude_platform_active",
+				"event": "ignominious_interlude_platform_active",
 				"is_zipline": false,
 				"rope_height": 128,
 				"stopped": 1.0,
@@ -840,17 +840,17 @@
 			"is_human": true,
 			"label": "_11b2cf72",
 			"objects_destroyed": {
-				"level": "ignominous-interlude.cfg",
+				"level": "ignominious-interlude.cfg",
 				"objects": []
 			},
 			"property_data": {
 				"last_unique_checkpoint_label": "_4c6f6ee4",
-				"last_unique_checkpoint_level_name": "ignominous-interlude.cfg",
-				"original_level_we_spawned_on": "ignominous-interlude.cfg",
+				"last_unique_checkpoint_level_name": "ignominious-interlude.cfg",
+				"original_level_we_spawned_on": "ignominious-interlude.cfg",
 				"player_has_died_since_last_unique_checkpoint": false,
 				"stored_events": {
-					"ignominous_interlude_gate_opened": 0,
-					"ignominous_interlude_platform_active": 0,
+					"ignominious_interlude_gate_opened": 0,
+					"ignominious_interlude_platform_active": 0,
 					"started_game": 1
 				}
 			},
@@ -881,7 +881,7 @@
 				"average_path": true,
 				"linked_object": "target2",
 				"path": [],
-				"release_control": false,
+				"release_control": true,
 				"speed": 5,
 				"start_with_player_as_first_node": false,
 				"target_zoom": 2,
@@ -897,7 +897,10 @@
 			"custom": true,
 			"label": "target",
 			"on_start_level": "if(level.player.get_stored_event('missing_berd_post_mushroom_boss_speech') or (level.player.get_stored_event('mushroom_boss_fight_won') = null), [remove_object(me)],
-								[set(level.zoom, 1.5),fire_event(get_object_or_die(level, 'camera1'),'triggered')]
+								[
+									set(level.zoom, 1.5),
+									fire_event(get_object_or_die(level, 'camera1'),'triggered'),
+								]
 								)",
 			"property_data": {
 				"_x2_bound": 214,
@@ -906,7 +909,7 @@
 				"_y_bound": 220
 			},
 			"type": "level_controller",
-			"x": 64,
+			"x": 270,
 			"y": 320
 		},
 		{
@@ -917,8 +920,8 @@
 			"on_triggered": "[
 				speech_dialog(
 								set(level.zoom, 2),
+								set(level.focus, []),
 								set(frogatto.facing, 1),
-								set(level.focus, [frogatto]),
 								set(frogatto.animation,'emote_talk'),  
 					frogatto,	[~So…~],
 								set(frogatto.animation,'emote_confused'),  
@@ -928,7 +931,7 @@
 								frogatto.scripted_move_to_x(70,-1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_2'))])
 				),
 			
-			] where frogatto = level.player",
+			] where frogatto = (obj frogatto_playable <- level.player)",
 
 			"on_conversation_part_2": "[
 				speech_dialog(
@@ -937,24 +940,19 @@
 					frogatto,	[~…~],
 								set(frogatto.animation,'emote_oh'),  
 					frogatto,	[~I am really, <em>really</em> scared I'm just going deeper\\ninto the swamp instead of heading out of it.~],
-								set(frogatto.animation,'emote_geez'),  
-								[~\"Showing up\" is the least you could do.~],
 								frogatto.scripted_move_to_x(270,1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_3'))])
 				),
 			
-			] where frogatto = level.player",
+			] where frogatto = (obj frogatto_playable <- level.player)",
 
 			"on_conversation_part_3": "[
 				speech_dialog(
-								set(frogatto.animation,'emote_oh'),  
-					frogatto,	[~I am really, <em>really</em> scared I'm just going deeper\\ninto the swamp instead of heading out of it.~],
 								set(frogatto.animation,'emote_geez'),  
-								[~\"Showing up\" is the least you could do.~],
-								set(level.focus,[]),
+					frogatto,	[~\"Showing up\" is the least you could do.~],
 								set(level.zoom, 1),
 				),
 			
-			] where frogatto = level.player",
+			] where frogatto = (obj frogatto_playable <- level.player)",
 			"property_data": {
 				"_x2_bound": 426,
 				"_x_bound": 176,
@@ -967,7 +965,7 @@
 		}
 	],
 	"dimensions": [-480,-2144,8959,1439],
-	"id": "ignominous-interlude.cfg",
+	"id": "ignominious-interlude.cfg",
 	"music": "SwampForestCreepy.ogg",
 	"next_level": "corrosive-climb.cfg",
 	"palettes": ["forest_dread"],
@@ -1420,7 +1418,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"zorder": "mushrooms_foreground"
 		}
 	],
-	"title": "",
+	"title": "Ignominious Interlude",
 	"touch_controls": true,
 	"vars": {
 	},
