--- a/data/level/Forest/mushroom-boss.cfg
+++ b/data/level/Forest/mushroom-boss.cfg
@@ -837,7 +837,7 @@
 	"dimensions": [-704,-1248,2527,1215],
 	"id": "mushroom-boss.cfg",
 	"music": "SwampForestCreepy.ogg",
-	"next_level": "ignominous-interlude.cfg",
+	"next_level": "ignominious-interlude.cfg",
 	"palettes": ["forest_dread"],
 	"preloads": "",
 	"previous_level": "the-empty-place.cfg",
