--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -288,7 +288,7 @@ properties: {
 			schedule(500, [
 				set(hitpoints,1),
 				set(invincible, -1),
-				frogatto.do_post_victory_transport('ignominous-interlude.cfg', 'target'),
+				frogatto.do_post_victory_transport('ignominious-interlude.cfg', 'target'),
 				frogatto.store_event('mushroom_boss_fight_won',1)
 			])
 		] where frogatto = (obj frogatto_playable <- level.player)",
