Totally redid the end-of-fight hack for the mushroom boss to something that much more cleanly handles the stalks getting removed.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -249,8 +249,19 @@ properties: {
 			feet_y: 176,
 		},
 	],
+	object_type: [{
+		id: "controller_postfight",
+		always_active: true,
+		prototype: ["transient_object"],
 
-	object_type: [ {
+		on_create: "[
+			schedule(500, [
+				frogatto.do_post_victory_transport('ignominious-interlude.cfg', 'target'),
+				frogatto.store_event('mushroom_boss_fight_won',1)
+			])		
+		] where frogatto = (obj frogatto_playable <- level.player)",
+	
+	},{
 		id: "controller",
 		always_active: true,
 		hitpoints: 1,
@@ -282,18 +293,6 @@ properties: {
 			]
 		])",
 		
-		on_postfight_outro: "[
-			set(me.is_a_boss, false),  //manually get rid of the boss hp bar early, since the heads, being cached in local storage, will still be alive.
-			set(_mook_spawner.spawning_active, false),
-			schedule(500, [
-				set(hitpoints,1),
-				set(invincible, -1),
-				frogatto.do_post_victory_transport('ignominious-interlude.cfg', 'target'),
-				frogatto.store_event('mushroom_boss_fight_won',1)
-			])
-		] where frogatto = (obj frogatto_playable <- level.player)",
-		on_die: "[set(hitpoints,1),set(me.is_a_boss, false)]",
-
 		on_process: "process_behavior",
 								
 		
@@ -302,7 +301,6 @@ properties: {
 			epihittable_obj_constructor: "commands :: [
 				if(level.player.get_stored_event('mushroom_boss_fight_won'), remove_object(me)),
 				set_max_hitpoints({casual: standard_thrown_damage * 3 * 10, challenging: standard_thrown_damage * 3 * 15}),
-				schedule(1, bind_command(def() set(stalks, stalks_uncached) )),
 			]",
 
 
@@ -342,9 +340,12 @@ properties: {
 			_mook_spawner: "find_or_die(level.chars, value is obj mushroom_walker_spawner)",
 
 		#-------------------------- custom death logic --------------------------#
-			handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands
-											 [map(stalks, bind_command(def() value.force_death()) ),
-												clear_dangerous_items,fire_event(me, 'postfight_outro')]",
+			handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands [
+				map(stalks, bind_command(def() value.force_death()) ),
+				clear_dangerous_items,
+				spawn('mushroom_boss.controller_postfight', mid_x, mid_y, 1),
+				set(_mook_spawner.spawning_active, false),
+			]",
 			
 			clear_dangerous_items: "[remove_object(value) | value <- level.chars, value.type in ['mushroom_boss.big_shot','mushroom_boss.stream_shot', 'mushroom_jellyfish']]",
 
@@ -357,8 +358,7 @@ properties: {
 			  where angle = head.rotate - 90",
 
 		#-------------------------- selectors for the heads/stalks --------------------------#
-			stalks_uncached: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
-			stalks: { type: "[obj mushroom_boss]", init: "[]" },
+			stalks: "[obj mushroom_boss] <- filter(level.chars, value.type = 'mushroom_boss')",
 
 			/* 
 				As much as it might be 'elegant' to program the boss in a way that gracefully adapts to a fully arbitrary number of boss heads, it's kind of a pointless endeavor.  We're softly going to expect that there are 4 heads, and leave open the potential of things breaking if we change it later.  Some of these pieces of code will break down if i.e. there are less than two stalks.
