Fixed a typo and clarified a comment.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -700,7 +700,12 @@ properties: {
 						
 						) asserting level.player is obj player_controlled)",
 						
-	spawn_corpse: "commands :: if(corpse_object_type is string, spawn(corpse_object_type, mid_x, mid_y, facing))",
+	spawn_corpse: "commands :: if(corpse_object_type is string,
+		spawn(corpse_object_type, mid_x, mid_y, {
+			facing: me.facing,
+			rotate: me.rotate,
+		})
+	)",
 	corpse_object_type: "string|null :: null",
 
 	my_taxonomy_as_string: "string :: switch(my_taxonomy,   //this is just a bit of glue to ease the transition to enums-for-all-stringly-typed stuff.
